Supress gn check error in proxy_config_service_linux.cc

Background on nogncheck

https://groups.google.com/a/chromium.org/forum/#!msg/chromium-dev/ctwaYl__aaQ/u12ZIlv21gIJ

BUG=596706

Review URL: https://codereview.chromium.org/1827623002

Cr-Commit-Position: refs/heads/master@{#382719}