net/proxy/proxy_config_service_linux.cc
@@ -42,7 +42,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "url/url_canon.h"
 
 #if defined(USE_GIO)
-#include "library_loaders/libgio.h"
+#include "library_loaders/libgio.h"  // nogncheck
 #endif  // defined(USE_GIO)
 
 namespace net {
